fix navbar-header visibility in mobile

--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/_navs.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/_navs.scss
@@ -150,11 +150,13 @@ $transitionDuration: 300ms;
 
     @media (max-width: $grid-float-breakpoint-max) {
         opacity: 1;
-        transition: opacity $transitionDuration * 2 $easeInOutCubic $transitionDuration * 2;
+        transform: translateY(0); // show at target position
+        transition: opacity ($transitionDuration * 2) $easeInOutCubic ($transitionDuration * 2), transform 0ms linear 0ms; // fade in and immediately transform
 
         .rex-nav-main-is-visible & {
             opacity: 0;
-            transition: opacity $transitionDuration * 2 $easeInOutCubic;
+            transform: translateY(-$navbar-height); // hide above navbar
+            transition: opacity ($transitionDuration * 2) $easeInOutCubic, transform 0ms linear ($transitionDuration * 2); // fade out and transform afterwards
         }
     }
 
